# Magpie

./: .gitmodules  CMakeLists.txt
assets/: scene.yaml
include/: Magpie.h
include/Magpie/: angle.h  light.h  mat.h  material.h  pathtracer.h  scene.h  vec.h
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
src/: angle.cpp  camera.h  display.cpp  display.h  input.cpp  input.h  light.cpp  main.cpp  mat.cpp  scene.cpp  vec.cpp
src/pathtracer/: opencl_pathtracer.cpp  pathtracer.cpp
